--- a/recipes/Brownies.html
+++ b/recipes/Brownies.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Homemade Brownies</h1>
-<img src="../Images/brownies.jpeg" alt='Yummy!' style="width:600px;height:400px;">
+<img src="../Images/Brownies.jpeg" alt="Yummy!" style="width:600px;height:400px;">
 <p>Are you craving something <sup>Soft</sup> and <sub>Sweet?</sub> Something <em>Chewy?</em> Something <strong>Chocolatey?</strong></p>
 <p>Well look no further! These delicious brownies will fulfill your cravings! They also won't take up too much of your time to make!</p>
 
