Updated the ' to " for the alt

--- a/recipes/Avocado_Breakfast_Sandwich.html
+++ b/recipes/Avocado_Breakfast_Sandwich.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Avocado Breakfast Sandwich</h1>
-<img src="../Images/Avocado_Breakfast_Sandwich.png" alt='Delicious Avocado Sandwich' style="width:500px;height:500px;">
+<img src="../Images/Avocado_Breakfast_Sandwich.png" alt="Delicious Avocado Sandwich" style="width:500px;height:500px;">
 <p>Do you like <strong>Eggs?</strong> What about <em>Avocado?</em></p>
 <p>What if I told you, you could have them BOTH for <strong><em>Breakfast?</em></strong></p>
 <p>That's Right! I'm gonna hook you up with a <strong>BANGER</strong> Meal that will make your co-workers jealous when they see you whip this bad boy out during the morning meeting!</p>
